--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <span class="tipo">grama</span>
 
               <div class="cartao-imagem">
-                <img src="src/images/bulbasaur.png" alt="Imagem do Bulbassaur"/>
+                <img src="src/images/bulbasaur.png" alt="Imagem do Bulbasaur"/>
               </div>
             </div>
 
@@ -255,7 +255,7 @@
           </li>
           <li class="pokemon" id="bulbasaur">
             <img src="src/images/cabeca-bulbasaur.png" alt="cabeça do bulbasaur">
-            <span>Bulbassaur</span>
+            <span>Bulbasaur</span>
           </li>
           <li class="pokemon" id="charmander">
             <img src="src/images/cabeca-charmander.png" alt="cabeça do charmander">
